--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "lodash": "^4.17.21",
     "native-base": "^3.3.4",
     "react": "17.0.2",
     "react-native": "0.66.4",
