--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,8 @@ buildscript {
         compileSdkVersion = 32
         targetSdkVersion = 32
         ndkVersion = "21.4.7075529"
+
+        googlePlayServicesVersion = "17.0.0"
     }
     repositories {
         google()
