--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clean-ios": "cd ios && xcodebuild clean && cd ../"
   },
   "dependencies": {
+    "@react-native-mapbox-gl/maps": "^8.5.0",
     "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
@@ -22,14 +23,21 @@
     "native-base": "^3.3.4",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-image-picker": "^4.7.3",
     "react-native-pager-view": "^5.4.9",
+    "react-native-permissions": "^3.2.0",
     "react-native-reanimated": "2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.1.1",
-    "react-native-vector-icons": "^9.0.0"
+    "react-native-vector-icons": "^9.0.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
